# ros-aseba

./: .gitignore  README.md
aseba/: CMakeLists.txt  aseba.patch  package.xml
asebaros/: CMakeLists.txt  README.md  package.xml
asebaros/include/asebaros/: asebaros.h  multi_asebaros.h
asebaros/launch/: example.aesl  example_multi.launch  example_single.launch  example_single_alt.launch
asebaros/src/: asebaros.cpp  asebaros.h  main.cpp  multi_asebaros.cpp
asebaros_msgs/: CMakeLists.txt  package.xml
asebaros_msgs/msg/: AsebaNode.msg  AsebaNodeList.msg
asebaros_msgs/srv/: GetNodeId.srv  GetNodeIds.srv  GetNodeList.srv  GetNodeName.srv  GetVariable.srv  GetVariableList.srv  LoadScriptToTarget.srv  LoadScripts.srv  SetVariable.srv
dashel/: CMakeLists.txt  package.xml
thymio_description/: CMakeLists.txt  model.config  package.xml
thymio_description/launch/: gazebo_bringup.launch  gazebo_bringup.launch_  model.launch  model2.launch.py  spawn.launch.py  test_gazebo_bringup.launch  test_gazebo_bringup_world.launch
thymio_description/meshes/: wheel.dae
thymio_description/urdf/: base.urdf.xacro  imu.urdf.xacro  proximity_sensor.urdf.xacro  wheel.urdf.xacro
thymio_driver/: CMakeLists.txt  package.xml  setup.py
thymio_driver/aseba/: *  multi_thymio_ros.aesl  thymio_ros.aesl
thymio_driver/launch/: base.launch  calibrate.launch  multi_thymio.launch  thymio.launch  thymio2.launch.py
thymio_driver/nodes/: calibrate_motors.py  multi_thymio_driver_node.py  thymio_driver_node.py
thymio_driver/thymio_driver/: calibrate_motors.py  do_calibration_loop.py
thymio_msgs/: CMakeLists.txt
