<?xml version="1.0"?>
<package>

  <name>thymio_description</name>
  <version>0.1.0</version>
  <description>
    Urdf model for Thymio II robot
  </description>

  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <!-- To automatically export GAZEBO_MODEL_PATH -->

  <!-- <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export> -->

  <!-- !!!!!! Only works if -->
  <!-- <run_depend>gazebo_ros</run_depend> -->

</package>
